test/typescript/openfl/errors/RangeErrorTest.ts
import RangeError from "openfl/errors/RangeError";
var assert = chai.assert;


describe ("TypeScript | RangeError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var rangeError = new RangeError ();
		assert.notEqual (rangeError, null);
		
	});
	
	
});